# material_side_of_polygons

./: CMakeLists.txt  GLWidget.cpp  GLWidget.h  README.md  mainwindow.h
input_data/polygon/: polygon_013.txt
